# DD2480

./: .gitignore  CONTRIBUTING.md  README.md
assignment2/: Cargo.toml  README.md
assignment2/doc/: crates.js  help.html  settings.html  src-files.js
assignment2/doc/assignment2/: all.html  constant.DOC_PATH.html  constant.LOGS_PATH.html  constant.REPO_PATH.html  constant.SERVER_URL.html  fn.main.html  index.html  sidebar-items.js
assignment2/doc/axum/: all.html  fn.serve.html  index.html  struct.Error.html  struct.Extension.html  struct.Form.html  struct.Json.html  struct.Router.html  trait.RequestExt.html  trait.RequestPartsExt.html  trait.ServiceExt.html  type.BoxError.html
assignment2/doc/axum_core/: all.html  index.html  struct.Error.html  trait.RequestExt.html  trait.RequestPartsExt.html  type.BoxError.html
assignment2/doc/axum_static/: all.html  fn.content_type_middleware.html  fn.static_router.html  index.html  sidebar-items.js
assignment2/doc/base64/: enum.DecodeError.html
assignment2/doc/bytes/: struct.Bytes.html  struct.BytesMut.html
assignment2/doc/chrono/: all.html  enum.Month.html  enum.Weekday.html  index.html  struct.DateTime.html  struct.Days.html  struct.FixedOffset.html  struct.Months.html  struct.NaiveDate.html  struct.NaiveDateTime.html  struct.NaiveTime.html  struct.TimeDelta.html  struct.Utc.html
assignment2/doc/dotenv/: enum.Error.html
assignment2/doc/flate2/: struct.GzBuilder.html
assignment2/doc/form_urlencoded/: struct.ByteSerialize.html  struct.Parse.html  (+1 more)
assignment2/src/: ci.rs  github.rs  main.rs  repository.rs
(+24376 files in other folders)
