[package]
name = "assignment2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15"
chrono = "0.4.34"
ureq = { version = "2.9.5", features = ["json"] }
cargo_metadata = "0.18.1"
tower-http = {version = "0.5.1", features = ["fs"]}
